--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body main div.wrapper .container .next--step {
   text-decoration: none;
   color: var(--b);
   background-color: var(--w);
-  width: auto;
+  width: 100%;
   height: auto;
   border-radius: var(--border1);
   box-shadow: 0 5px 0 0 var(--orange);
@@ -102,7 +102,7 @@ body main div.content {
   overflow: hidden;
   margin-top: 5px;
   z-index: 10;
-  transition: all 1s !important;
+  transition: all 0.8s !important;
   transform-origin: left;
   display: flex;
   align-items: center;
@@ -369,7 +369,7 @@ body main #content_me {
   position: absolute;
   top: 100vh;
   left: 0;
-  transition: all 1s !important;
+  transition: all 0.8s !important;
   display: flex;
   align-items: center;
   justify-content: center;
