--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,7 @@ body{
                     text-decoration: none;
                     color: var(--b);
                     background-color: var(--w);
-                    width: auto;
+                    width: 100%;
                     height: auto;
                     border-radius: var(--border1);
                     box-shadow: 0 5px 0 0 var(--orange);
@@ -127,7 +127,7 @@ body{
             margin-top: 5px;
             z-index: 10;
             //position: absolute;
-            transition: all 1s!important;
+            transition: all .8s !important;
             transform-origin: left;
             @include tn-flex-row;
 
@@ -390,7 +390,7 @@ body{
             position: absolute;
             top: 100vh;
             left: 0;
-            transition: all 1s !important;
+            transition: all .8s !important;
             @include tn-flex-column;
             justify-content: flex-start;
 
