--- a/css/main.scss
+++ b/css/main.scss
@@ -600,8 +600,11 @@ body{
 
         li.reply{
             .from{
-                margin: 0 0 45px 0!important;
+                margin: 0 0 50px 0!important;
             }
         }
+    }
+    .footer--copyright{
+        flex-direction: column!important;
     }
 }
