--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,40 @@ body main div.content .scrollable--content .col:not(.row .col) {
   gap: 1em;
   padding-bottom: 3em;
 }
+body main div.content .scrollable--content .col:not(.row .col) div.video--loading {
+  width: 100%;
+  height: 50vh;
+  background: #f4f4f4;
+  border: 0;
+  border-radius: var(--border1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  gap: 1em;
+}
+body main div.content .scrollable--content .col:not(.row .col) div.video--loading p {
+  font-weight: initial !important;
+}
+body main div.content .scrollable--content .col:not(.row .col) div.video--loading div.spinner {
+  border: 3px solid rgba(61, 239, 255, 0.2);
+  border-top-color: var(--blue_light);
+  border-radius: 50%;
+  width: 3em;
+  height: 3em;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+body main div.content .scrollable--content .col:not(.row .col) iframe {
+  width: 100%;
+  border: 0;
+  border-radius: var(--border1);
+}
 body main div.content .scrollable--content .col:not(.row .col) .chat {
   border: 1px solid #e3e3e3;
   border-radius: var(--border1);
