--- a/css/main.scss
+++ b/css/main.scss
@@ -157,6 +157,39 @@ body{
                     gap: 1em;
                     padding-bottom: 3em;
 
+                    div.video--loading{
+                        width: 100%;
+                        height: 50vh;
+                        background: #f4f4f4;
+                        border: 0;
+                        border-radius: var(--border1);
+
+                        @include tn-flex-column;
+                        gap: 1em;
+
+                        p{
+                            font-weight: initial!important;
+                        }
+                        div.spinner {
+                            border: 3px solid hsla(185, 100%, 62%, 0.2);
+                            border-top-color: var(--blue_light);
+                            border-radius: 50%;
+                            width: 3em;
+                            height: 3em;
+                            animation: spin 1s linear infinite;
+                        }
+
+                        @keyframes spin {
+                            to {
+                                transform: rotate(360deg);
+                            }
+                        }
+                    }
+                    iframe{
+                        width: 100%;
+                        border: 0;
+                        border-radius: var(--border1);
+                    }
                     .chat{
                         border: 1px solid #e3e3e3;
                         border-radius: var(--border1);
