--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,7 @@ body main div.content .scrollable--content .col:not(.row .col) {
   padding-bottom: 3em;
 }
 body main div.content .scrollable--content .col:not(.row .col) div.video--loading {
+  display: none !important;
   width: 100%;
   height: 50vh;
   background: #f4f4f4;
@@ -169,6 +170,7 @@ body main div.content .scrollable--content .col:not(.row .col) div.video--loadin
 }
 body main div.content .scrollable--content .col:not(.row .col) iframe {
   width: 100%;
+  height: 50vh;
   border: 0;
   border-radius: var(--border1);
 }
