--- a/css/main.scss
+++ b/css/main.scss
@@ -158,6 +158,7 @@ body{
                     padding-bottom: 3em;
 
                     div.video--loading{
+                        display: none!important;
                         width: 100%;
                         height: 50vh;
                         background: #f4f4f4;
@@ -187,6 +188,7 @@ body{
                     }
                     iframe{
                         width: 100%;
+                        height: 50vh;
                         border: 0;
                         border-radius: var(--border1);
                     }
